platform/08-apps/manifests/k8sgpt-cr.yaml
apiVersion: core.k8sgpt.ai/v1alpha1
kind: K8sGPT
metadata:
  name: k8sgpt
  namespace: k8sgpt-operator-system
  labels:
    skyhook.io/component: k8sgpt
    skyhook.io/tier: incubating
spec:
  ai:
    enabled: true
    backend: amazonbedrock
    model: anthropic.claude-3-sonnet-20240229-v1:0
    region: us-west-2
  targetNamespace: ""
  filters:
    - kube-system
    - flux-system
    - karpenter
  noCache: false
  version: v0.3.41
  repository: ghcr.io/k8sgpt-ai/k8sgpt
  extraOptions:
    backstage:
      enabled: false
